SSG-5026: fix byte limit widget to not allow values < 1
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29352 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/ByteLimitPanel.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/ByteLimitPanel.properties
@@ -1,6 +1,5 @@
 unlimited.label=Allow unlimited message size (not recommended)
 bytes=bytes
 max.bytes=Restrict messages to
-cluster.prop.error=Error getting server value: {0}
-cluster.prop.value.error=Parameter {0} value ''{1}'' not a valid long integer, using {2} instead
 checkbox.label=Override maximum message size:
+override.value.error=The {0} field must be a number between {1} and {2}.
