SSM-3486: Fixed by displaying "Subject DN is empty." if Subject DN is left as blank and OK button is clicked in Signing Certificate Properties dialolg.  User is still allowed to re-enter a Subject DN.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29365 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/SigningCertificatePropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/SigningCertificatePropertiesDialog.properties
@@ -16,3 +16,4 @@ button.label.close=&Close
 text.cert.expiry.age=Certificate Expiry Age
 
 error.message.invalid.subject.dn=Invalid Subject DN: {0}
+error.message.empty.subject.dn=Subject DN is empty.
