--- a/modules/gateway/assertions/SshAssertion/ivy.xml
+++ b/modules/gateway/assertions/SshAssertion/ivy.xml
@@ -12,8 +12,8 @@
 		<artifact name="SshAssertion" type="aar" ext="aar" conf="master"/>
 	</publications>
 	<dependencies>
-        <dependency org="org.apache.mina" name="mina-core" rev="2.0.1" force="true" conf="core"/>
-        <dependency org="org.apache.sshd" name="sshd-core" rev="0.5.0-p96-l7p1" force="true" conf="core"/>
+        <dependency org="org.apache.mina" name="mina-core" rev="2.0.2" force="true" conf="core"/>
+        <dependency org="org.apache.sshd" name="sshd-core" rev="0.6.0-l7p1" force="true" conf="core"/>
         <dependency name="layer7-modular-assertions" rev="latest.integration"
                     conf="compile->compile;runtime->runtime;test->test"/>
                 
