SSG-4927: adding ability to specify conversion format.  make root tag name mandatory when converting JSON to XML.  adding patch files for the api we use.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29399 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/JsonTransformationAssertion/src/main/resources/com/l7tech/external/assertions/jsontransformation/console/JsonTransformationPropertiesDialog.properties
+++ b/modules/gateway/assertions/JsonTransformationAssertion/src/main/resources/com/l7tech/external/assertions/jsontransformation/console/JsonTransformationPropertiesDialog.properties
@@ -11,3 +11,6 @@ json.xml=JSON To XML
 invalid.transformation=Invalid transformation selected
 source.dest.tab.title=Source and Destination
 test.tab.title=Test
+convention.standard=Standard
+convention.jsonml=JSONML
+invalid.transformation.convention=Invalid transformation convention selected
