--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/SigningCertificatePropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/SigningCertificatePropertiesDialog.properties
@@ -1,5 +1,6 @@
 dialog.title=Signing Certificate Properties
 error.dialog.title=Error Signing Certificate
+warning.dialog.title=Signing Certificate Warning
 public.key.details.dialog.title=Public Key Details
 
 label.subject.dn=&Subject DN:
@@ -17,3 +18,5 @@ text.cert.expiry.age=Certificate Expiry Age
 
 error.message.invalid.subject.dn=Invalid Subject DN: {0}
 error.message.empty.subject.dn=Subject DN is empty.
+
+short.key.warning.message=<html>The signing key is too short for the signature algorithm using {0}.<br><center>SHA-1 will be used instead. Continue?</center></html>
