--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/ByteLimitPanel.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/ByteLimitPanel.properties
@@ -3,3 +3,4 @@ bytes=bytes
 max.bytes=Restrict messages to
 checkbox.label=Override maximum message size:
 override.value.error=The {0} field must be a number between {1} and {2}.
+override.syntax.error=The {0} field must be a context variable or an integer.
