check if context variable exist only
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29481 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/ByteLimitPanel.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/ByteLimitPanel.properties
@@ -3,4 +3,4 @@ bytes=bytes
 max.bytes=Restrict messages to
 checkbox.label=Override maximum message size:
 override.value.error=The {0} field must be a number between {1} and {2}.
-override.syntax.error=The {0} field must be a context variable or an integer.
+override.syntax.error=The {0} field must contain a context variable and/or an integer.
