--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
@@ -11,7 +11,7 @@ timeoutSecondsLabel=seconds
 portError=The port number must be a number between 1 and 65535, or a context variable. Default port is {0}.
 errorTitle=SSH Route Assertion Validation
 usernamePasswordLabel=Username/Password
-privateKeyLabel=Private Key
+privateKeyTypeLabel=Private Key Type
 wssHeaderLabel=Current WSS header handling
 wssDontModifyLabel=&Don't modify the request Security header
 wssRemoveActorLabel=Remove &Layer 7 actor and mustUnderstand attributes from processed Security header
@@ -19,7 +19,6 @@ wssprocessHeaderLabel=&Remove processed Security header from request before rout
 connectionLabel=Connection
 authLabel=Authentication
 sshKnownHostsLabel=SSH Public Key
-loadFromFileLabel=Load From File
 sshTimeoutLabel=SSH Timeout
 publicKeyError=There was an issue with the SSH Public Key input. {0}
 passwordEmptyError=Password authentication is enabled but no password has been entered
@@ -36,3 +35,4 @@ connectionSettingsLabel=Connection settings
 copySettingsLabel=Copy settings
 readTimeoutLabel=Read timeout:
 downloadContentTypeLabel=Content type:
+setPrivateKeyLabel=Set private key ...
