bug 9936: Adding unit test for the Resolve Service assertion.
Adding mockito support to trunk.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29538 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/test/ivy.xml
+++ b/modules/test/ivy.xml
@@ -15,5 +15,6 @@
         <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="core"/>
         <dependency org="org.scala-lang" name="scala-library" rev="2.9.1" force="true" conf="core"/>
         <dependency org="org.specs2" name="specs2_2.9.1" rev="1.5" force="true" conf="core"/>
+        <dependency org="org.mockito" name="mockito-core" rev="1.9.0-rc1" force="true" conf="test"/>
     </dependencies>
 </ivy-module>
