--- a/modules/skunkworks/ivy.xml
+++ b/modules/skunkworks/ivy.xml
@@ -40,6 +40,7 @@
         <dependency org="commons-codec" name="commons-codec" rev="1.4" force="true" conf="core"/>
         <dependency org="org.scala-lang" name="scala-library" rev="2.9.1" force="true" conf="core"/>
         <dependency org="org.specs2" name="specs2_2.9.1" rev="1.5" force="true" conf="test"/>
+        <dependency org="org.mockito" name="mockito-core" rev="1.9.0-rc1" force="true" conf="test"/>
 
         <exclude org="asm" module="asm" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
