Changes necessary for a more flexible pam filter for ldap queries and disabling the PAM_MEMBER_ATTR and PAM_GROUPDN parameters as are not necessary in this implementation.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29539 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -51,24 +51,25 @@ PASS_HASH_ALGO="md5"
 # have been adopted to make nss_ldap use something different
 PAM_LOGIN_ATTR="uid"
 
-# PAM_FILTER variable specifies a filter to use when retrieving user information from LDAP.
-# The user entry must match the attribute value assertion of (pam_login_attribute=login_name)
-# as well as any filter specified here.
+# PAM_FILTER variable specifies the group ID in numeraical form to which the user must be member
+# in order to be allowed to log in.
 # It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "objectclass=posixaccount"
-PAM_FILTER="objectclass=posixaccount"
+# For multiple groups, as an example, the following can be used:
+# "|(gidNumber=4000)(gidNumber=3000)"
+# Default: "empty"
+PAM_FILTER="gidNumber=4000"
 
 # PAM_MEMBER_ATTR variable specifies the attribute to use when testing a user's membership of a group
 # specified in the PAM_GROUPDN option.
 # It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "memberuid"
-PAM_MEMBER_ATTR="memberuid"
+# Default: "memberUid"
+#PAM_MEMBER_ATTR="memberUid"
 
 # PAM_GROUPDN variable should contain the distinguished name of a group to which a user must belong
-# for logon authorization to succeed.
+# for login authorization to succeed.
 # It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "ssgusers"
-PAM_GROUPDN="ssgusers"
+# Default: "empty"
+#PAM_GROUPDN="cn=ssgconfig_ldap,ou=posixGroups,dc=l7tech,dc=com"
 
 # PAM_MIN_UID variable specifies the minimum numeric value of the UID allowed to login.
 # It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
@@ -102,7 +103,7 @@ NSS_IDLE_TIMELIMIT="600"
 # with exponential backoff, "soft" will fail immediately. To avoid long delays/hangs in case the
 # LDAP server is not responding, soft should be used.
 # It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
-# Default: soft
+# Default: "soft"
 NSS_BIND_POLICY="soft"
 
 # NSS_BASE_PASSWD variable will specify the base dn for the attribute that holds the password.
@@ -147,6 +148,12 @@ LDAP_BASE="dc=l7tech,dc=com"
 # Default: 389
 LDAP_PORT="389"
 
+# LDAP_GROUP_NAME variable must contain the group name defined in LDAP server to hold the users allowed
+# access to SSG Configuration Menu; based on this value the sudoers file will be configured
+# It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
+# Default: <empty>
+LDAP_GROUP_NAME="ssgconfig_ldap"
+
 # LDAP_CACERT_URL variable is use to retrive a CA certificate to be used in TLS.
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
 # The certificate must be in PEM format and must be valid.
@@ -182,7 +189,7 @@ LDAP_TLS_CERT="/home/ssgconfig/client.pem"
 # Default: <empty>
 LDAP_TLS_KEY="/home/ssgconfig/client.key"
 
-# ADVANCED_TLS_CONF variable is used to enable some andvanced check to be done by the client on
+# ADVANCED_TLS_CONF variable is used to enable some andvanced checks to be done by the client on
 # server's certificate in TLS handshake. It can be "yes" or "no".
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
 # If this is set to "yes", "LDAP_TLS_CIPHER_SUITE", "LDAP_TLS_REQCERT" and "LDAP_TLS_CRLCHECK" will
@@ -224,7 +231,7 @@ LDAP_TLS_CRLCHECK="none"
 # LDAP_ANONYM variable enables bindDN with shared password or anonymous authentication to LDAP server.
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
 # It can be "yes" or "no"; if "no" is selected, "LDAP_BINDDN" and "LDAP_BIND_PASSWD" will be required and set.
-# Default: yes
+# Default: no
 LDAP_ANONYM=no
 
 # The default bind DN to use when performing ldap operations. The bind DN
