Grouping configuration options in categories to be more clear  and user friendly.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29551 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -21,6 +21,11 @@
 # Default: file
 CFG_TYPE="radius_with_ldap"
 
+#################################
+## RADIUS Client Configuration ##
+
+# The below options are the only one you need to configure if only Radius will be used:
+
 # RADIUS_SRV_IP variable should contain the IP address of the Radius server to be used.
 # It is relevant only if the CFG_TYPE variable is "radius_only or "radius_and_ldap".
 # It's value should only be a host IP address, e.g. "10.7.48.130" (a CIDR notation may not work).
@@ -38,91 +43,22 @@ RADIUS_SECRET="secret1234"
 # Default: 3
 RADIUS_TIMEOUT="3"
 
-# PASS_HASH_ALGO variable can have several values but we will only accept "md5" or "sha512".
-# This is used to set the default hash algorithm for local user's passwords as well as on LDAP server.
-# It is relevant only if the CFG_TYPE variable is "ldap_only or "radius_and_ldap".
-# Default: md5
-PASS_HASH_ALGO="md5"
+# END of Radius client configuration
+#####################################
 
-# PAM_LOGIN_ATTR variable specifies the attribute to use when constructing the attribute value
-# assertion for retrieving a directory entry for a user's login name.
-# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "uid" (for compatibility with RFC 2307). Should only be changed if other work-arounds
-# have been adopted to make nss_ldap use something different
-PAM_LOGIN_ATTR="uid"
 
-# PAM_FILTER variable specifies the group ID in numeraical form to which the user must be member
-# in order to be allowed to log in.
-# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# For multiple groups, as an example, the following can be used:
-# "|(gidNumber=4000)(gidNumber=3000)"
-# Default: "empty"
-PAM_FILTER="gidNumber=4000"
+##############################################################################
+## LDAP CLIENT CONFIGURATION	- there are 3 areas to configure:           ##
+##                                                                          ##
+## NSS LDAP Client Library - to enable the system to query the LDAP server  ##
+## PAM LDAP Client Library - to make decisions pertaining to authorization  ##
+##############################################################################
 
-# PAM_MEMBER_ATTR variable specifies the attribute to use when testing a user's membership of a group
-# specified in the PAM_GROUPDN option.
-# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "memberUid"
-#PAM_MEMBER_ATTR="memberUid"
 
-# PAM_GROUPDN variable should contain the distinguished name of a group to which a user must belong
-# for login authorization to succeed.
-# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "empty"
-#PAM_GROUPDN="cn=ssgconfig_ldap,ou=posixGroups,dc=l7tech,dc=com"
-
-# PAM_MIN_UID variable specifies the minimum numeric value of the UID allowed to login.
-# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "0"
-PAM_MIN_UID="0"
-
-# PAM_MAX_UID variable specifies the maximum numeric value of the UID allowed to login.
-# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "0"
-PAM_MAX_UID="0"
-
-# NSS_TIMELIMIT variable specifies the time limit (in seconds) to use when performing searches.
-# A value of zero (0) can be used to wait indefinitely for searches to be completed - not recommended.
-# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "10"
-NSS_TIMELIMIT="10"
-
-# NSS_BIND_TIMELIMIT variable specifies the time limit (in seconds) to use when connecting to
-# the directory server.
-# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "30"
-NSS_BIND_TIMELIMIT="30"
-
-# NSS_IDLE_TIMELIMIT variable specifies the time (in seconds) after which nss_ldap will close
-# connections to the directory server.
-# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "600"
-NSS_IDLE_TIMELIMIT="600"
-
-# NSS_BIND_POLICY variable controls the reconnect policy: "hard" will retry connecting to
-# with exponential backoff, "soft" will fail immediately. To avoid long delays/hangs in case the
-# LDAP server is not responding, soft should be used.
-# It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
-# Default: "soft"
-NSS_BIND_POLICY="soft"
-
-# NSS_BASE_PASSWD variable will specify the base dn for the attribute that holds the password.
-# The base DN will be added as suffix to the value of this variable.
-# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "ou=posixAccounts"
-NSS_BASE_PASSWD="ou=posixAccounts"
-
-# NSS_BASE_GROUP variable will specify the base dn for the attribute that holds the group entries.
-# The base DN will be added as suffix to the value of this variable.
-# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "ou=posixGroups"
-NSS_BASE_GROUP="ou=posixGroups"
-
-# NSS_BASE_SHADOW variable will specify the base dn for the attribute that holds the shadow entries.
-# The base DN will be added as suffix to the value of this variable.
-# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
-# Default: "ou=posixAccounts"
-NSS_BASE_SHADOW="ou=posixAccounts"
+###################################
+## NSS LDAP Libary configuration ##
+#
+# The below options are needed in case LDAP only or Radius and LDAP will be used:
 
 # LDAP_TYPE variable is either "ldap" or "ldaps" to identify if natively supported TLS will be used
 # to communicate with the LDAP server or not. If "ldaps" is used, relevant variables below become mandatory.
@@ -148,11 +84,56 @@ LDAP_BASE="dc=l7tech,dc=com"
 # Default: 389
 LDAP_PORT="389"
 
+# LDAP_ANONYM variable enables bindDN with shared password or anonymous authentication to LDAP server.
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
+# It can be "yes" or "no"; if "no" is selected, "LDAP_BINDDN" and "LDAP_BIND_PASSWD" will be required and set.
+# Default: no
+LDAP_ANONYM=no
+
+# The default bind DN to use when performing ldap operations. The bind DN
+# must be specified as a Distinguished Name in LDAP format.
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
+# Default: <empty>
+LDAP_BINDDN="cn=Manager,dc=l7tech,dc=com"
+
+# The password for bind (simple authentication).
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
+# Default: <empty>
+LDAP_BIND_PASSWD="1234"
+
+# NSS_BASE_PASSWD variable will specify the base dn for the attribute that holds the password.
+# The base DN will be added as suffix to the value of this variable.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "ou=posixAccounts"
+NSS_BASE_PASSWD="ou=posixAccounts"
+
+# NSS_BASE_GROUP variable will specify the base dn for the attribute that holds the group entries.
+# The base DN will be added as suffix to the value of this variable.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "ou=posixGroups"
+NSS_BASE_GROUP="ou=posixGroups"
+
+# NSS_BASE_SHADOW variable will specify the base dn for the attribute that holds the shadow entries.
+# The base DN will be added as suffix to the value of this variable.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "ou=posixAccounts"
+NSS_BASE_SHADOW="ou=posixAccounts"
+
 # LDAP_GROUP_NAME variable must contain the group name defined in LDAP server to hold the users allowed
 # access to SSG Configuration Menu; based on this value the sudoers file will be configured
 # It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
 # Default: <empty>
 LDAP_GROUP_NAME="ssgconfig_ldap"
+
+# PASS_HASH_ALGO variable can have several values but we will only accept "md5" or "sha512".
+# This is used to set the default hash algorithm for local user's passwords as well as on LDAP server.
+# It is relevant only if the CFG_TYPE variable is "ldap_only or "radius_and_ldap".
+# Default: md5
+PASS_HASH_ALGO="md5"
+
+
+# ======================= LDAPS =======================
+# (the following options can be ignored if LDAP is used)
 
 # LDAP_CACERT_URL variable is use to retrive a CA certificate to be used in TLS.
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
@@ -228,22 +209,83 @@ LDAP_TLS_REQCERT="allow"
 # Default: none
 LDAP_TLS_CRLCHECK="none"
 
-# LDAP_ANONYM variable enables bindDN with shared password or anonymous authentication to LDAP server.
-# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
-# It can be "yes" or "no"; if "no" is selected, "LDAP_BINDDN" and "LDAP_BIND_PASSWD" will be required and set.
-# Default: no
-LDAP_ANONYM=no
+## END of NSS LDAP Library configuration
+#########################################
 
-# The default bind DN to use when performing ldap operations. The bind DN
-# must be specified as a Distinguished Name in LDAP format.
-# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
-# Default: <empty>
-LDAP_BINDDN="cn=Manager,dc=l7tech,dc=com"
+#############################################
+## OPTIONAL NSS LDAP Library configuration ##
+# (keeping the default values for these will probably work as expected)
 
-# The password for bind (simple authentication).
-# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
-# Default: <empty>
-LDAP_BIND_PASSWD="1234"
+# NSS_BIND_POLICY variable controls the reconnect policy: "hard" will retry connecting to
+# with exponential backoff, "soft" will fail immediately. To avoid long delays/hangs in case the
+# LDAP server is not responding, soft should be used.
+# It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
+# Default: "soft"
+NSS_BIND_POLICY="soft"
+
+# NSS_TIMELIMIT variable specifies the time limit (in seconds) to use when performing searches.
+# A value of zero (0) can be used to wait indefinitely for searches to be completed - not recommended.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "10"
+NSS_TIMELIMIT="10"
+
+# NSS_BIND_TIMELIMIT variable specifies the time limit (in seconds) to use when connecting to
+# the directory server.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "30"
+NSS_BIND_TIMELIMIT="30"
+
+# NSS_IDLE_TIMELIMIT variable specifies the time (in seconds) after which nss_ldap will close
+# connections to the directory server.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "600"
+NSS_IDLE_TIMELIMIT="600"
+
+## END of OPTIONAL NSS LDAP Library configuration
+##################################################
+
+
+
+############################
+## PAM LDAP Configuration ##
+# The below options are needed in case LDAP only or Radius and LDAP will be used:
+
+# PAM_LOGIN_ATTR variable specifies the attribute to use when constructing the attribute value
+# assertion for retrieving a directory entry for a user's login name.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "uid" (for compatibility with RFC 2307). Should only be changed if other work-arounds
+# have been adopted to make nss_ldap use something different
+PAM_LOGIN_ATTR="uid"
+
+# PAM_FILTER variable specifies the group ID in numeraical form to which the user must be member
+# in order to be allowed to log in.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# For multiple groups, as an example, the following can be used:
+# "|(gidNumber=4000)(gidNumber=3000)"
+# Default: "empty"
+PAM_FILTER="gidNumber=4000"
+
+## END of PAM LDAP Configuration
+#################################
+
+
+
+#############################################
+## OPTIONAL PAM LDAP Library configuration ##
+# (keeping the default values for these will probably work as expected)
+
+# PAM_MIN_UID variable specifies the minimum numeric value of the UID allowed to login.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "0"
+PAM_MIN_UID="0"
+
+# PAM_MAX_UID variable specifies the maximum numeric value of the UID allowed to login.
+# It is relevant and mandatory only if the CFG_TYPE is "ldap_only".
+# Default: "0"
+PAM_MAX_UID="0"
+
+## END of OPTIONAL PAM LDAP Library configuration
+##################################################
 
 
 # END of configuration file
