SSG-5134: update labelling
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29557 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
+++ b/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
@@ -8,8 +8,8 @@ main.button.editParam=E&dit Parameter
 main.button.removeParam=Re&move Parameter
 
 main.label.strategy=Failover Strategy:
-main.label.timeout=Connection Timeout (sec.):
-main.label.readTimeout=Read Timeout (sec.):
+main.label.timeout=Connection Timeout (in seconds):
+main.label.readTimeout=Read Timeout (in seconds):
 
 main.checkbox.failAssertion=&Continue processing if virus found.
 
