SSG-4964: Fix for Size limit enforcement causes invalid response messages to be sent
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29578 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -542,6 +542,12 @@ ioHttpDefaultContentType.description = The value of the "Content-Type" HTTP head
 ioHttpDefaultContentType.clusterProperty = io.httpDefaultContentType
 ioHttpDefaultContentType.systemProperty = ${propertyPrefix}.ioHttpDefaultContentType
 
+ioHttpResponseStreamUnlimited.description = Ignore the message size limit when streaming HTTP responses (true/false, default true)
+ioHttpResponseStreamUnlimited.default = true
+ioHttpResponseStreamUnlimited.clusterProperty = io.httpResponseStreamUnlimited
+ioHttpResponseStreamUnlimited.validation.regex = ${regex.boolean}
+ioHttpResponseStreamUnlimited.visible = false
+
 ioHttpPoolMaxIdleTime.description = Time an idle thread will wait for additional work before shutting down (milliseconds)
 ioHttpPoolMaxIdleTime.default = 60000
 ioHttpPoolMaxIdleTime.systemProperty = ${propertyPrefix}.ioHttpPoolMaxIdleTime
