Add hidden cluster property to allow HTTP response streaming to be disabled.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29592 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -542,6 +542,12 @@ ioHttpDefaultContentType.description = The value of the "Content-Type" HTTP head
 ioHttpDefaultContentType.clusterProperty = io.httpDefaultContentType
 ioHttpDefaultContentType.systemProperty = ${propertyPrefix}.ioHttpDefaultContentType
 
+ioHttpResponseStreaming.description = True to allow streaming of HTTP responses when possible (true/false, default true)
+ioHttpResponseStreaming.default = true
+ioHttpResponseStreaming.clusterProperty = io.httpResponseStreaming
+ioHttpResponseStreaming.validation.regex = ${regex.boolean}
+ioHttpResponseStreaming.visible = false
+
 ioHttpResponseStreamUnlimited.description = Ignore the message size limit when streaming HTTP responses (true/false, default true)
 ioHttpResponseStreamUnlimited.default = true
 ioHttpResponseStreamUnlimited.clusterProperty = io.httpResponseStreamUnlimited
