Appliance log viewing as per http://sarek.l7tech.com/mediawiki/index.php/Logsink_Properties#Appliance_Log_Viewing
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29602 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -3084,6 +3084,7 @@
                         <include name="systeminfo.sh"/>
                         <include name="patch_launcher"/>
                         <include name="patchcli_launch"/>
+                        <include name="viewlog"/>
                     </fileset>
                     <fileset dir="${src.root}/etc/appliance/crypto">
                         <include name="ncipherconfig.pl"/>
