Added the correct default values for all parameters and more description for the parameters relevant in LDAPS.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29626 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -19,7 +19,7 @@
 # - radius_only
 # - radius_with_ldap
 # Default: file
-CFG_TYPE="radius_with_ldap"
+CFG_TYPE="ldap_only"
 
 #################################
 ## RADIUS Client Configuration ##
@@ -47,12 +47,12 @@ RADIUS_TIMEOUT="3"
 #####################################
 
 
-##############################################################################
-## LDAP CLIENT CONFIGURATION	- there are 3 areas to configure:           ##
-##                                                                          ##
-## NSS LDAP Client Library - to enable the system to query the LDAP server  ##
-## PAM LDAP Client Library - to make decisions pertaining to authorization  ##
-##############################################################################
+#################################################################################
+## LDAP CLIENT CONFIGURATION - there are 2 areas to configure:                 ##
+##                                                                             ##
+## NSS LDAP Client Library - to enable the system to query the LDAP server     ##
+## PAM LDAP Client Library - to make decisions pertaining to authorization     ##
+#################################################################################
 
 
 ###################################
@@ -63,19 +63,19 @@ RADIUS_TIMEOUT="3"
 # LDAP_TYPE variable is either "ldap" or "ldaps" to identify if natively supported TLS will be used
 # to communicate with the LDAP server or not. If "ldaps" is used, relevant variables below become mandatory.
 # It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
-# Default: ldap
+# Default: "ldap"
 LDAP_TYPE="ldap"
 
 # LDAP_SRV variable referes to the LDAP server to be used.
 # It is relevant only if the CFG_TYPE variable is "ldap_only or "radius_and_ldap".
 # If LDAP_TYPE is "ldap" a host IP address can be used, e.g. "10.7.48.130" (a CIDR notation may not work).
 # If LDAP_TYPE is "ldaps" a hostname must be used and it should match the CN in the certificate used for TLS.
-# Default: <empty>
-LDAP_SRV="10.7.48.50"
+# Default: "ldap-srv"
+LDAP_SRV="ldap-srv"
 
 # LDAP_BASE variable should contain the DN of the search base, e.g. "dc=example,dc=com".
 # It is relevant only if the CFG_TYPE variable is "ldap_only or "radius_and_ldap".
-# Default: <empty>
+# Default: "dc=l7tech,dc=com"
 LDAP_BASE="dc=l7tech,dc=com"
 
 # LDAP_PORT variable must contain one numeric value representing the port to be used
@@ -93,13 +93,13 @@ LDAP_ANONYM=no
 # The default bind DN to use when performing ldap operations. The bind DN
 # must be specified as a Distinguished Name in LDAP format.
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
-# Default: <empty>
+# Default: "cn=Manager,dc=l7tech,dc=com"
 LDAP_BINDDN="cn=Manager,dc=l7tech,dc=com"
 
 # The password for bind (simple authentication).
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap".
-# Default: <empty>
-LDAP_BIND_PASSWD="1234"
+# Default: "7layer"
+LDAP_BIND_PASSWD="7layer"
 
 # NSS_BASE_PASSWD variable will specify the base dn for the attribute that holds the password.
 # The base DN will be added as suffix to the value of this variable.
@@ -122,13 +122,13 @@ NSS_BASE_SHADOW="ou=posixAccounts"
 # LDAP_GROUP_NAME variable must contain the group name defined in LDAP server to hold the users allowed
 # access to SSG Configuration Menu; based on this value the sudoers file will be configured
 # It is relevant only if the CFG_TYPE variable is "ldap_only" or "radius_and_ldap".
-# Default: <empty>
+# Default: "ssgconfig_ldap"
 LDAP_GROUP_NAME="ssgconfig_ldap"
 
 # PASS_HASH_ALGO variable can have several values but we will only accept "md5" or "sha512".
 # This is used to set the default hash algorithm for local user's passwords as well as on LDAP server.
 # It is relevant only if the CFG_TYPE variable is "ldap_only or "radius_and_ldap".
-# Default: md5
+# Default: "md5"
 PASS_HASH_ALGO="md5"
 
 
@@ -152,23 +152,31 @@ LDAP_CACERT_URL=""
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps"
 # AND LDAP_CACERT_URL is empty.
 # The full path AND filename must be used; the file nominated here must be/contain x509 certificate(s).
-# Default: <empty>
+# Default: "/home/ssgconfig/certificate.pem"
 LDAP_CACERT_FILE="/home/ssgconfig/certificate.pem"
 
 # CLT_TLS_AUTH variable is used to enable client authentication to server in TLS handshake.
 # Enabling this means TLS will be established with mutual authentication.
 # It can be "yes or "no".
-# Default: no
-CLT_TLS_AUTH="yes"
+# Default: "no"
+CLT_TLS_AUTH="no"
 
-# The filename that contains the client certificate:
+# LDAP_TLS_CERT variable specifies the file representing the client certificate
+# fir mutual authentication if CLT_TLS_AUTH is set to "yes"
+# It is relevant only if CLT_TLS_AUTH is set to "yes".
+# It can be uploaded to the system via scp and it is recommended to be placed in
+# the home directory of ssgconfig user
 # Default: <empty>
-LDAP_TLS_CERT="/home/ssgconfig/client.pem"
+LDAP_TLS_CERT=""
 
-# The file that contains the private key that matches the certificate stored in
-# the TLS_CERT file. Password protected private keys are not currently supported.
+# LDAP_TLS_KEY variable specifies the file that contains the private key that
+# matches the certificate stored in the LDAP_TLS_CERT file.
+# Password protected private keys are not supported.
+# It is relevant only if CLT_TLS_AUTH is set to "yes".
+# It can be uploaded to the system via scp and it is recommended to be placed in
+# the home directory of ssgconfig user
 # Default: <empty>
-LDAP_TLS_KEY="/home/ssgconfig/client.key"
+LDAP_TLS_KEY=""
 
 # ADVANCED_TLS_CONF variable is used to enable some andvanced checks to be done by the client on
 # server's certificate in TLS handshake. It can be "yes" or "no".
@@ -176,17 +184,19 @@ LDAP_TLS_KEY="/home/ssgconfig/client.key"
 # If this is set to "yes", "LDAP_TLS_CIPHER_SUITE", "LDAP_TLS_REQCERT" and "LDAP_TLS_CRLCHECK" will
 # be required and set.
 # Default: no
-ADVANCED_TLS_CONF="yes"
+ADVANCED_TLS_CONF="no"
+
+### If AVANCED_TLS_CONF above was set to "yes":
 
 # The acceptable cipher suite and preference order; Should be a cipher specification supported by the
 # local OpenSSL; (cipher-list values supported by the local OpenSSL: "openssl ciphers -v ALL")
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
-# Default: HIGH:MEDIUM:+SSLv2
+# Default: "HIGH:MEDIUM:+SSLv2"
 LDAP_TLS_CIPHER_SUITE="HIGH:MEDIUM:+SSLv2"
 
 # Determine if the client should verify the server's certificate
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
-# Default: yes
+# Default: "yes"
 LDAP_TLS_CHECKPEER="yes"
 
 # What checks to perform on server certificates in a TLS session, if any.
@@ -196,8 +206,9 @@ LDAP_TLS_CHECKPEER="yes"
 # - allow: if no or bad certificate is provided, the session proceeds normally
 # - try: if a bad certificate is provided, the session is immediately terminated
 # - demand | hard: if no or bad certificate is provided, the session is immediately terminated
-# Default: demand
-LDAP_TLS_REQCERT="allow"
+# For self-signed certificates, set this to "never".
+# Default: "never"
+LDAP_TLS_REQCERT="never"
 
 # Check the CRL of the CA to verify if the server certificates have not been
 # revoked. (TLS_CACERTDIR must be set.)
@@ -206,7 +217,7 @@ LDAP_TLS_REQCERT="allow"
 # - none: No CRL checks are performed
 # - peer: Check the CRL of the peer certificate
 # - all: Check the CRL for a whole certificate chain
-# Default: none
+# Default: "none"
 LDAP_TLS_CRLCHECK="none"
 
 ## END of NSS LDAP Library configuration
@@ -263,7 +274,7 @@ PAM_LOGIN_ATTR="uid"
 # For multiple groups, as an example, the following can be used:
 # "|(gidNumber=4000)(gidNumber=3000)"
 # Default: "empty"
-PAM_FILTER="gidNumber=4000"
+PAM_FILTER=""
 
 ## END of PAM LDAP Configuration
 #################################
