--- a/etc/appliance/authconfig/radius_ldap_setup.conf
+++ b/etc/appliance/authconfig/radius_ldap_setup.conf
@@ -30,12 +30,12 @@ CFG_TYPE="ldap_only"
 # It is relevant only if the CFG_TYPE variable is "radius_only or "radius_and_ldap".
 # It's value should only be a host IP address, e.g. "10.7.48.130" (a CIDR notation may not work).
 # Default: <empty>
-RADIUS_SRV_HOST="10.7.48.50"
+RADIUS_SRV_HOST=""
 
 # RADIUS_SECRET variable should be the string used as shared secret by the Radius server, e.g. "poiu0987"
 # It is relevant only if the CFG_TYPE variable is "radius_only or "radius_and_ldap".
 # Default: <empty>
-RADIUS_SECRET="secret1234"
+RADIUS_SECRET=""
 
 # RADIUS_TIMEOUT should contain only one numeric value representing the time interval in seconds
 # that the client should wait for the Radius server to reply, e.g. "3" for 3 seconds
@@ -155,6 +155,27 @@ LDAP_CACERT_URL=""
 # Default: "/home/ssgconfig/certificate.pem"
 LDAP_CACERT_FILE="/home/ssgconfig/certificate.pem"
 
+# What checks to perform on server certificates in a TLS session, if any.
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
+# It can be one of the followings:
+# - never: the client will not request or check any server certificate
+# - allow: if no or bad certificate is provided, the session proceeds normally
+# - try: if a bad certificate is provided, the session is immediately terminated
+# - demand | hard: if no or bad certificate is provided, the session is immediately terminated
+# For self-signed certificates, set this to "never".
+# Default: "never"
+LDAP_TLS_REQCERT="never"
+
+# Check the CRL of the CA to verify if the server certificates have not been
+# revoked. (TLS_CACERTDIR must be set.)
+# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
+# It can be one of the followings:
+# - none: No CRL checks are performed
+# - peer: Check the CRL of the peer certificate
+# - all: Check the CRL for a whole certificate chain
+# Default: "none"
+LDAP_TLS_CRLCHECK="none"
+
 # CLT_TLS_AUTH variable is used to enable client authentication to server in TLS handshake.
 # Enabling this means TLS will be established with mutual authentication.
 # It can be "yes or "no".
@@ -198,27 +219,6 @@ LDAP_TLS_CIPHER_SUITE="HIGH:MEDIUM:+SSLv2"
 # It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
 # Default: "yes"
 LDAP_TLS_CHECKPEER="yes"
-
-# What checks to perform on server certificates in a TLS session, if any.
-# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
-# It can be one of the followings:
-# - never: the client will not request or check any server certificate
-# - allow: if no or bad certificate is provided, the session proceeds normally
-# - try: if a bad certificate is provided, the session is immediately terminated
-# - demand | hard: if no or bad certificate is provided, the session is immediately terminated
-# For self-signed certificates, set this to "never".
-# Default: "never"
-LDAP_TLS_REQCERT="never"
-
-# Check the CRL of the CA to verify if the server certificates have not been
-# revoked. (TLS_CACERTDIR must be set.)
-# It is relevant only if CFG_TYPE is "ldap_only" or "radius_and_ldap" AND LDAP_TYPE is "ldaps".
-# It can be one of the followings:
-# - none: No CRL checks are performed
-# - peer: Check the CRL of the peer certificate
-# - all: Check the CRL for a whole certificate chain
-# Default: "none"
-LDAP_TLS_CRLCHECK="none"
 
 ## END of NSS LDAP Library configuration
 #########################################
