--- a/modules/gateway/assertions/JsonTransformationAssertion/src/main/resources/com/l7tech/external/assertions/jsontransformation/console/JsonTransformationPropertiesDialog.properties
+++ b/modules/gateway/assertions/JsonTransformationAssertion/src/main/resources/com/l7tech/external/assertions/jsontransformation/console/JsonTransformationPropertiesDialog.properties
@@ -14,4 +14,4 @@ test.tab.title=Test
 convention.standard=Standard
 convention.jsonml=JSONML
 invalid.transformation.convention=Invalid transformation convention selected
-prettyPrint=Pretty Print Output:
+prettyPrint=Format Print Output:
