SSG-5143:  Added new cluster property "security.xml.xenc.encryptEmptyElements" that can be used to turn off empty element encryption dynamically if needed for interoperability (such as with previous XVC versions).  A node restart is NOT required for changes to this cluster property to take effect.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29639 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1412,6 +1412,11 @@ security.xml.dsig.idAttributeNames.default = {http://docs.oasis-open.org/wss/200
 security.xml.dsig.idAttributeNames.clusterProperty = security.xml.dsig.idAttributeNames
 security.xml.dsig.idAttributeNames.systemProperty = com.l7tech.common.security.xml.idAttributeConfig
 
+security.xml.xenc.encryptEmptyElements.description = Whether content encryption of a completely element should add an EncryptedData to the element that decrypts to a completely empty node set.  Set this to "false" if needed for interoperability (such as with pre-6.2 versions of the XML VPN Client).  (true/false; default=true)
+security.xml.xenc.encryptEmptyElements.clusterProperty = security.xml.xenc.encryptEmptyElements
+security.xml.xenc.encryptEmptyElements.systemProperty = com.l7tech.security.xml.encryptEmptyElements
+security.xml.xenc.encryptEmptyElements.default = true
+
 wsdmNotificationEnabled.description = Enable WSDM subscription notifications (true/false)
 wsdmNotificationEnabled.default = true
 wsdmNotificationEnabled.clusterProperty = wsdm.notification.enabled
