SSM-3550: add type to SecurePassword and use it to manage SSH private key.  Remove encryptPassword and decryptPassword from TrustedCertAdmin.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29641 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshRouteAssertionPropertiesPanel.properties
@@ -11,7 +11,7 @@ timeoutSecondsLabel=seconds
 portError=The port number must be a number between 1 and 65535, or a context variable. Default port is {0}.
 errorTitle=SSH Route Assertion Validation
 usernamePasswordLabel=Username/Password
-privateKeyTypeLabel=Private Key Type
+privateKeyLabel=Private Key
 wssHeaderLabel=Current WSS header handling
 wssDontModifyLabel=&Don't modify the request Security header
 wssRemoveActorLabel=Remove &Layer 7 actor and mustUnderstand attributes from processed Security header
@@ -21,7 +21,8 @@ authLabel=Authentication
 sshKnownHostsLabel=SSH Public Key
 sshTimeoutLabel=SSH Timeout
 publicKeyError=There was an issue with the SSH Public Key input. {0}
-passwordEmptyError=Password authentication is enabled but no password has been entered
+passwordEmptyError=Password authentication is enabled but no password has been selected
+privateKeyEmptyError=Private key authentication is enabled but no key has been selected
 hostKeyEmptyError=The 'Validate Server's host key' checkbox is ticked but no server key has been input
 protocolLabel=Protocol:
 scpLabel=SCP
