--- a/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
+++ b/modules/gateway/assertions/SshAssertion/src/main/resources/com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel.properties
@@ -2,6 +2,6 @@ maxConcurrentSessionsPerUserLabel=Max. concurrent session(s) per user:
 scpLabel=SCP
 sftpLabel=SFTP
 enableLabel=Enable:
-hostPrivateKeyLabel=Host private key type:
-setHostPrivateKeyLabel=Set host private key ...
+hostPrivateKeyLabel=Host private key:
+setHostPrivateKeyLabel=Manage Private Keys
 idleTimeoutInMinsLabel=Idle timeout (in minutes):
